chore: fix multi-platform builds